--- a/Project #1 - Team 8.ipynb
+++ b/Project #1 - Team 8.ipynb
@@ -31,7 +31,7 @@
    "id": "0ab0cb26",
    "metadata": {},
    "source": [
-    "## Demographics - Defining the  Canadian population/socioeconomics make-up"
+    "## Demographics - Defining the  Canadian Population & Socioeconomic Composition"
    ]
   },
   {
