MCarvalho completed work

--- a/Project #1 - Team 8.ipynb
+++ b/Project #1 - Team 8.ipynb
@@ -57,16 +57,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "681d798b",
-   "metadata": {},
-   "source": [
-    "### Collect data from census data:\n",
-    "* Household income statistics by household type: https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=9810005701\n",
-    "* The impact of the COVID-19 pandemic on income by percentage change in income between 2019 and 2020: https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=9810008701"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "749fa87d",
    "metadata": {},
    "source": [
@@ -80,7 +70,24 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading and loading table_98100057\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "98100057-eng.zip: 100%|█████████████████████| 4.92M/4.92M [00:07<00:00, 644kB/s]\n",
+      "/Users/michelle.carvalho/opt/anaconda3/lib/python3.9/site-packages/tables/file.py:426: UserWarning: a closed node found in the registry: ``/table_98100057/meta/values_block_2/meta/_i_table``\n",
+      "  warnings.warn(\"a closed node found in the registry: \"\n"
+     ]
+    }
+   ],
    "source": [
     "# Pull data from Stats-Can: Canada Census website\n",
     "stats_df = sc.table_to_df(\"98-10-0057-01\")"
@@ -880,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 10,
    "id": "3ad6e2d9",
    "metadata": {},
    "outputs": [
@@ -888,7 +895,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/qk/h0rtvttx7pq7gh9m9g6zmlkry_033b/T/ipykernel_10225/3791912914.py:42: UserWarning: Tight layout not applied. The bottom and top margins cannot be made large enough to accommodate all axes decorations.\n",
+      "/var/folders/qk/h0rtvttx7pq7gh9m9g6zmlkry_033b/T/ipykernel_34150/3791912914.py:42: UserWarning: Tight layout not applied. The bottom and top margins cannot be made large enough to accommodate all axes decorations.\n",
       "  plt.tight_layout()\n"
      ]
     },
@@ -962,6 +969,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3e5bb415",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The median after tax household income for 2015 is: $74,000.00'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "household_median_2015 = plotdata[\"household_income_2015\"].median()\n",
+    "f\"The median after tax household income for 2015 is: ${household_median_2015:,.2f}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "35e0185a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The median after tax household income for 2020 is: $79,500.00'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "household_median_2020 = plotdata[\"household_income_2020\"].median()\n",
+    "f\"The median after tax household income for 2020 is: ${household_median_2020:,.2f}\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "77223799",
    "metadata": {},
@@ -971,10 +1022,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "06ea1dd8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading and loading table_98100087\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "98100087-eng.zip: 100%|█████████████████████| 58.3M/58.3M [01:28<00:00, 658kB/s]\n",
+      "/Users/michelle.carvalho/opt/anaconda3/lib/python3.9/site-packages/tables/file.py:426: UserWarning: a closed node found in the registry: ``/table_98100087/meta/values_block_2/meta/_i_table``\n",
+      "  warnings.warn(\"a closed node found in the registry: \"\n"
+     ]
+    }
+   ],
    "source": [
     "# Pull data from Stats-Can: Canada Census website\n",
     "covid_df = sc.table_to_df(\"98-10-0087-01\")"
@@ -982,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "d3173f2c",
    "metadata": {},
    "outputs": [
@@ -1244,7 +1312,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "23f752e8",
    "metadata": {},
    "outputs": [],
@@ -1295,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "774fd82c",
    "metadata": {},
    "outputs": [
@@ -1441,7 +1509,7 @@
        "4                                             66.8  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1456,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "cf289056",
    "metadata": {},
    "outputs": [
@@ -1488,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "4dbb8133",
    "metadata": {},
    "outputs": [],
@@ -1504,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "7f29ac5c",
    "metadata": {},
    "outputs": [
@@ -1650,7 +1718,7 @@
        "4                                           66.80%  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1670,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 22,
    "id": "da31d62b",
    "metadata": {
     "scrolled": true
@@ -1851,14 +1919,14 @@
        "10                                               63.9     "
       ]
      },
-     "execution_count": 148,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# File to load for vizualizations\n",
-    "income_sources_data = \"income_sources.csv\"\n",
+    "income_sources_data = \"input_files/income_sources.csv\"\n",
     "\n",
     "# Read Data File and store into Pandas DataFrames\n",
     "income_sources = pd.read_csv(income_sources_data)\n",
@@ -1869,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 23,
    "id": "b8f41f0e",
    "metadata": {},
    "outputs": [
@@ -1910,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 24,
    "id": "bb4fc4de",
    "metadata": {},
    "outputs": [
@@ -1951,25 +2019,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a634af8",
-   "metadata": {},
-   "source": [
-    "### Observations & Discussion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a901a353",
-   "metadata": {},
-   "source": [
-    "* https://www12.statcan.gc.ca/census-recensement/2021/geo/maps-cartes/thematicmaps-cartesthematiques/inc-rev/map-eng.cfm?lang=E&mapid=1&dguid=2021A000011124\n",
-    "* https://www.statcan.gc.ca/en/sc/video/income-profile-canadians \n",
-    "\n",
-    "______________________________________________________________________________________________________________________"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "691f2544",
    "metadata": {},
    "source": [
@@ -1981,7 +2030,7 @@
    "id": "708245bc",
    "metadata": {},
    "source": [
-    "## Food sales as a determinant of changing behaviours"
+    "## Retail sales as a determinant of changing behaviours"
    ]
   },
   {
@@ -2017,24 +2066,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "950673b9",
-   "metadata": {},
-   "source": [
-    "### Observations & Discussion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "eab622b4",
-   "metadata": {},
-   "source": [
-    "* \n",
-    "\n",
-    "______________________________________________________________________________________________________________________"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "4dec4d6d",
    "metadata": {},
    "source": [
@@ -2046,7 +2077,7 @@
    "id": "85a33100",
    "metadata": {},
    "source": [
-    "## Retail sales as a determinant of changing behaviours"
+    "## Sales of personal consumer products as a determinant of changing behaviours"
    ]
   },
   {
@@ -2078,24 +2109,6 @@
    "outputs": [],
    "source": [
     "# Visualize the dataset\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dee1e7ee",
-   "metadata": {},
-   "source": [
-    "### Observations & Discussion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "93027ecf",
-   "metadata": {},
-   "source": [
-    "* \n",
-    "\n",
-    "______________________________________________________________________________________________________________________"
    ]
   },
   {
@@ -2143,24 +2156,6 @@
    "outputs": [],
    "source": [
     "# Visualize the dataset\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6d605b03",
-   "metadata": {},
-   "source": [
-    "### Observations & Discussion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0fe3d7e3",
-   "metadata": {},
-   "source": [
-    "* \n",
-    "\n",
-    "______________________________________________________________________________________________________________________"
    ]
   }
  ],
